--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -45,22 +45,23 @@
         android:layout_marginEnd="14dp"
         android:layout_marginRight="14dp"
         android:layout_marginTop="14dp"
-        android:id="@+id/radioGroup">
+        android:id="@+id/rdDificultades">
 
         <RadioButton
+            android:id="@+id/rbFacil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Facil" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/rbMedia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Media" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/rbDificil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -72,9 +73,9 @@
         android:id="@+id/btnGuardarDificultad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/radioGroup"
-        android:layout_alignRight="@+id/radioGroup"
-        android:layout_below="@+id/radioGroup"
+        android:layout_alignEnd="@+id/rdDificultades"
+        android:layout_alignRight="@+id/rdDificultades"
+        android:layout_below="@+id/rdDificultades"
         android:layout_marginTop="18dp"
         android:text="Guardar Dificultad" />
 
