--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -7,7 +7,7 @@
     tools:context="com.uso.tareacodigo.Juego">
 
     <TextView
-        android:id="@+id/lblLetra"
+        android:id="@+id/lblRespuesta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -20,7 +20,7 @@
         android:id="@+id/lblIntento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lblLetra"
+        android:layout_below="@+id/lblRespuesta"
         android:layout_centerHorizontal="true"
         android:text="Intentos:0" />
 
